Fixed overflow in Small Screens

--- a/src/app.sass
+++ b/src/app.sass
@@ -10,6 +10,7 @@ html
   min-height: 100%
   font-family: 'Poppins', Arial, sans-serif
   background: $c-dark
+  overflow: hidden
 
 .container
   @include xl-screens
